Added links for cats

--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
 				<section class="Blog">
 		
 
-				<a class="Blog-entry" href="https://www.petfinder.com/petdetail/36256267" alt="tabby cat">
+				<a class="Blog-entry KittyImg-one" href="https://www.animalhouseshelter.com/pets/bingi/" alt="tabby cat">
 				 	<h2>BLOG ENTRY 1</h2>
 				</a>
 
 
-				<div class="Blog-entry">
+				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/serena-9/"></a>
 				<h2>BLOG ENTRY 2</h2>
 		
-				</div>
+				</a>
 
-				<div class="Blog-entry">
+				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/carraway/"></a>
 				<h2>BLOG ENTRY 3</h2>
-				</div>
+				</a>
 
-				<div class="Blog-entry">
+				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/fiona-22/"></a> 
 				<h2>BLOG ENTRY 4</h2>
-				</div>
+				</a>
 
 				</section>
 			</section>
