--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 				</a>
 
 
-				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/serena-9/"></a>
+				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/serena-9/" alt="patchy kitten">
 				<h2>BLOG ENTRY 2</h2>
 		
 				</a>
 
-				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/carraway/"></a>
+				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/carraway/" alt="red cat">
 				<h2>BLOG ENTRY 3</h2>
 				</a>
 
-				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/fiona-22/"></a> 
+				<a class="Blog-entry" href="https://www.animalhouseshelter.com/pets/fiona-22/" alt="other cat"> 
 				<h2>BLOG ENTRY 4</h2>
 				</a>
 
